--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 
 
-.main {
+.container-box {
     background-image: url("../Grid2.bmp");
     height: 400px;
     width: 400px;
-    position: fixed;
+    /* position: fixed; */
     left: 100px;
     border: 1px solid red;
 }
-.test-box {
+.all-sub-boxes {
     margin: 0;
     padding: 0;
     height: 50px;
     width: 50px;
     border: 1px solid blue;
-    display: inline-block;
+    /* display: inline-block; */
     background-color: aquamarine;
 }
 
