--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
 
+.card {
+    background: #000;
+    color: white;
+    width: 560px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 5px solid greenyellow;
+}
+
+h1 {
+    font-size: 24px;
+    margin-top: 100px;
+    /* padding: 5px; */
+}
+
+p {
+    font-size: 18px;
+    margin-bottom: 100px;
+    
+}
+
+.links {
+    margin-top: 10px;
+}
+
+
+
 
 .container-box {
     background-image: url("../Grid2.bmp");
@@ -20,12 +47,8 @@
 
 .two {
     background-color: blueviolet;
-    position: absolute;
+    /* position: absolute; */
     left: 30px;
     top: 30px;
 }
 
-
-p {
-    background-color: lightblue;
-}
